@@ -43,12 +43,7 @@ subprojects {
 		}
 	}
 
-	tasks.withType(JavaCompile) {
-		options.compilerArgs += '--enable-preview'
-	}
-	tasks.withType(Test) {
-		jvmArgs += "--enable-preview"
-	}
+
 
 	version "1.0-SNAPSHOT"
 
